Review descriptions and comments Refactor the code for consistency

--- a/Classification/Creditworthiness_Estimation_for_Credit_Card_Issuance/Creditworthiness_Estimation_for_Credit_Card_Issuance.ipynb
+++ b/Classification/Creditworthiness_Estimation_for_Credit_Card_Issuance/Creditworthiness_Estimation_for_Credit_Card_Issuance.ipynb
@@ -334,7 +334,7 @@
     "    \"\"\"\n",
     "    Create a logistic regressor model receiving features, target and test size for hold-out validation split.\n",
     "    Allow to set the main hyperparameters and optionally show the metrics summary for train and test sets.\n",
-    "    If model name is provided, the metrics are stored in global dataframe variable.\n",
+    "    If model name is provided, the metrics are stored in a global dataframe.\n",
     "    \n",
     "    Return the fitted model.\n",
     "    \"\"\"\n",
@@ -443,7 +443,7 @@
     "    \"\"\"\n",
     "    Create a stochastic gradient descent classifier model receiving features, target and test size for hold-out validation split.\n",
     "    Allow to set the main hyperparameters and optionally show the metrics summary for train and test sets.\n",
-    "    If model name is provided, the metrics are stored in global dataframe variable.\n",
+    "    If model name is provided, the metrics are stored in a global dataframe.\n",
     "    \n",
     "    Return the all fitted models.\n",
     "    \"\"\"\n",
@@ -616,7 +616,7 @@
     "    \"\"\"\n",
     "    Create a Naive Bayes model receiving features, target and test size for hold out validation split.\n",
     "    Allow to set the main hyperparameters and optionally show the metrics summary for train and test sets.\n",
-    "    If model name is provided, the metrics are stored in global dataframe variable.\n",
+    "    If model name is provided, the metrics are stored in a global dataframe.\n",
     "    \n",
     "    Return the fitted model.\n",
     "    \"\"\"\n",
@@ -718,7 +718,7 @@
     "    \"\"\"\n",
     "    Create a SVM classifier receiving features, target and test size for hold-out validation split.\n",
     "    Allow to set the main hyperparameters and optionally show the metrics summary for train and test sets.\n",
-    "    If model name is provided, the metrics are stored in global dataframe variable.\n",
+    "    If model name is provided, the metrics are stored in a global dataframe.\n",
     "    \n",
     "    Return the fitted model.\n",
     "    \"\"\"\n",
@@ -805,7 +805,7 @@
     "    \"\"\"\n",
     "    Create a Multi Layer Perceptron classifier receiving features, target and test size for hold-out validation split.\n",
     "    Allow to set the main hyperparameters and optionally show the metrics summary for train and test sets.\n",
-    "    If model name is provided, the metrics are stored in global dataframe variable.\n",
+    "    If model name is provided, the metrics are stored in a global dataframe.\n",
     "    \n",
     "    Return the fitted model.\n",
     "    \"\"\"\n",
@@ -886,7 +886,7 @@
     "    \"\"\"\n",
     "    Create a Nearest Neighbors classifier receiving features, target and test size for hold-out validation split.\n",
     "    Allow to set the main hyperparameters and optionally show the metrics summary for train and test sets.\n",
-    "    If model name is provided, the metrics are stored in global dataframe variable.\n",
+    "    If model name is provided, the metrics are stored in a global dataframe.\n",
     "    \n",
     "    Return the fitted model.\n",
     "    \"\"\"\n",
@@ -1666,7 +1666,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exploring the dataset about credit records for each customer, it is possible to form an idea about the creation a target variable, given that it is not explicitly declared. From the monthly loan status history, at least three different customer classes can be identified:\n",
+    "Exploring the dataset about credit records for each customer, it is possible to form an idea about the creation of a target variable, given that it is not explicitly declared. From the monthly loan status history, at least three different customer classes can be identified:\n",
     "- NON_BORROWER: a customer who has never requested a loan.\n",
     "- COMPLIANT: a customer who has requested a loan and has paid the monthly amount **more** times than instances of non-compliance with the due date.\n",
     "- DEFAULTER: a customer who has requested a loan and has paid the monthly amount **fewer** times than instances of non-compliance with the due date.\n",
@@ -3241,7 +3241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The correlation matrix does not highlight significant correlations between the features and the target variable, suggesting that any potential relationship with the target might be determined by a more complex combination of features.\n",
+    "The correlation matrix does not highlight particular linear correlations between the features and the target variable, suggesting that any potential relationship with the target might be determined by a more complex combination of features.\n",
     "\n",
     "Regarding the correlations between features, here are some observed relationships:\n",
     "\n",
@@ -3364,7 +3364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As already verified previously, the ID feature is present with all singular occurences, so as customer identifier is not offering any information and can be removed. Opposite case for FLAG_MOBIL that is the same for all observations, so unuseful as well."
+    "As already verified previously, the ID feature is present with all singular occurences; so as customer identifier is not offering any information, it can be removed. Opposite case for FLAG_MOBIL that is the same for all observations, so unuseful as well."
    ]
   },
   {
