--- a/Classification/Health_Insurance_Cross-Sell_Prediction/Health_Insurance_Cross-Sell_Prediction.ipynb
+++ b/Classification/Health_Insurance_Cross-Sell_Prediction/Health_Insurance_Cross-Sell_Prediction.ipynb
@@ -3395,7 +3395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model aims to predict whether someone with health insurance might also be interested in purchasing vehicle insurance. As acquiring new customers yields more benefits compared to resources spent on contacting an eventually uninterested individual, it is preferable to minimize false negatives (potential new customers incorrectly predicted as uninterested) to maximize the chances of gaining new policyholders. Regenerating in full the last Model 5.2, by refining the activation function threshold, predictions can be enhanced for this purposes. This involves lowering the threshold for predicting a positive response to increase the recall value close to 1."
+    "The model aims to predict whether someone with health insurance might also be interested in purchasing vehicle insurance. Supposing that acquiring new customers yields more benefits compared to resources spent on contacting an eventually uninterested individual, it is preferable to minimize false negatives (potential new customers incorrectly predicted as uninterested) to maximize the chances of gaining new policyholders. Regenerating in full the last Model 5.2, by refining the activation function threshold, predictions can be enhanced for this purposes. This involves lowering the threshold for predicting a positive response to increase the recall value close to 1."
    ]
   },
   {
