--- a/NLP/Anti-Hater_Filter_for_Social_Network/Anti-Hater_Filter_for_Social_Network.ipynb
+++ b/NLP/Anti-Hater_Filter_for_Social_Network/Anti-Hater_Filter_for_Social_Network.ipynb
@@ -3476,7 +3476,7 @@
    "id": "b18bdde1-047d-4c64-96ec-75b48638d824",
    "metadata": {},
    "source": [
-    "Evaluating the training history, it's evident that accuracy reaches its peak already in the early epochs before start declining around epoch 17. On the other hand, log loss decreases rapidly until epoch 5 and then decreases more slowly in subsequent epochs. Therefore, an attempt is made to further fine-tune the GRU model by retraining it until epoch 14, where the best combination of accuracy and log loss is achieved."
+    "Evaluating the training history, it's evident that accuracy reaches its peak already in the early epochs before it starts declining around epoch 17. On the other hand, log loss decreases rapidly until epoch 5 and then decreases more slowly in subsequent epochs. Therefore, an attempt is made to further fine-tune the GRU model by retraining it until epoch 14, where the best combination of accuracy and log loss is achieved."
    ]
   },
   {
@@ -3767,7 +3767,7 @@
    "id": "8ae9ea5f-abb6-4c6a-b784-b73288889731",
    "metadata": {},
    "source": [
-    "Now the preprocessing of text and the model prediction are consolidated into a single function so evaluate compactly the model predictions for further test comments. The function needs as input the model to use, the comment to predict, the vocabulary tokenizer, the maximum padding length and the threshold for the sigmoid output."
+    "Now the preprocessing of text and the model prediction are consolidated into a single function, so to evaluate compactly the model predictions for further test comments. The function needs as input the model to use, the comment to predict, the vocabulary tokenizer, the maximum padding length and the threshold for the sigmoid output."
    ]
   },
   {
@@ -3918,7 +3918,7 @@
    "id": "fda0aac9-cb5e-4523-a96a-7dfe750c4f0d",
    "metadata": {},
    "source": [
-    "Overall the developed model has acceptable performance for an initial approach to comment filtering. It is observed for all tested neural networks, that generally the recall is lower than the accuracy, indicating the presence of many false negatives, so many offensive comments not detected. This is particularly evident for less represented classes like 'threat', where models completely fail to detect positive cases.\n",
+    "Overall the developed model has acceptable performance for an initial approach to comment filtering. It is observed for all tested neural networks, that generally the recall is lower than the accuracy, indicating the presence of many false negatives, so many offensive comments are not detected. This is particularly evident for less represented classes like 'threat', where models completely fail to detect positive cases.\n",
     "\n",
     "Possible enhancements for the model could include:\n",
     "* Oversampling less represented offensive comment cases during preprocessing to increase their weight in model training.\n",
@@ -3951,7 +3951,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
