--- a/NLP/Anti-Spam_Detection_System_for_University/Anti-Spam_Detection_System_for_University.ipynb
+++ b/NLP/Anti-Spam_Detection_System_for_University/Anti-Spam_Detection_System_for_University.ipynb
@@ -20,7 +20,7 @@
     "- Train a classifier to identify spam\n",
     "- Identify the main topics among the spam emails in the dataset\n",
     "- Calculate the semantic distance between the obtained topics to infer their heterogeneity\n",
-    "- Extract the organizations present in the secure (non-spam) emails.\n",
+    "- Extract the organizations present in the secure (non-spam) emails\n",
     "\n",
     "In particular a classifier model was developed to distinguish between spam and non-spam emails using the capabilities of recurrent neural networks. Subsequently the Latent Dirichlet Allocation model was applied to identify the main topics discussed in spam emails, enabling automatic grouping of communications based on common terms. Moreover the semantic distance between the various identified topics was evaluated, providing an overview of the heterogeneity of spam contents. Finally, using an NLP model from spaCy, organization entities were extracted from non-spam emails, allowing for automatic identification of company or institution words."
    ]
@@ -323,7 +323,7 @@
     "def model_metrics(y_true, y_pred, y_proba):\n",
     "    \"\"\"\n",
     "    Receive real and predicted target values from a classification model and\n",
-    "    return the related precision, recall, accuracy, F1 score, and log loss metrics.\n",
+    "    return the related precision, recall, accuracy, F1 score and log loss metrics.\n",
     "    \"\"\"\n",
     "\n",
     "    # Confusion matrix\n",
@@ -2474,7 +2474,7 @@
    "id": "e4c09626-14d2-4c04-8d90-e1256cf2846c",
    "metadata": {},
    "source": [
-    "The recurrent neural network models all demonstrate excellent performance, similar to each other, and superior to the logistic regressor used as the baseline. Given the importance of both detecting spam emails and not mistakenly blocking safe ones, accuracy is considered the most indicative metric of the model's quality. Therefore, the GRU is chosen as the best model."
+    "The recurrent neural network models all demonstrate excellent performance, similar to each other and superior than the logistic regressor used as baseline. Given the importance of both detecting spam emails and not mistakenly blocking safe ones, accuracy is considered the most indicative metric of the model's quality. Therefore, the GRU is chosen as the best model."
    ]
   },
   {
@@ -3188,7 +3188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
