--- a/Python_Apps/Software_for_a_Products_Store/Software_for_a_Products_Store.ipynb
+++ b/Python_Apps/Software_for_a_Products_Store/Software_for_a_Products_Store.ipynb
@@ -22,9 +22,9 @@
     "    - **View Inventory**: The current inventory can be displayed, showing all the products along with their details.\n",
     "    - **Update Inventory**: Users can update the quantity of existing products in the inventory.\n",
     "\n",
-    "2. **Sales and Profit Tracking**:\n",
+    "2. **Sales and Profits Tracking**:\n",
     "    - **Register Sales**: Users can register sales of products, which automatically updates the inventory by decreasing the sold quantities.\n",
-    "    - **Calculate Profits**: The software calculates the profit made from sales by comparing the buying price and selling price of products.\n",
+    "    - **Calculate Profits**: The software calculates the profits made from sales by comparing the buying price and selling price of products.\n",
     "\n",
     "3. **User Commands**:\n",
     "    - The software supports a set of user commands that can be entered interactively. Commands include adding products (`aggiungi`), viewing inventory (`visualizza`), registering sales (`vendi`), and closing the program (`chiudi`).\n",
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "inventory_file_name = \"inventory.csv\"\n",
-    "profit_file_name = \"profits.txt\"\n",
+    "profits_file_name = \"profits.txt\"\n",
     "key_name = \"name\"\n",
     "key_quantity = \"quantity\"\n",
     "key_buying_price = \"buying_price\"\n",
@@ -149,8 +149,8 @@
     "    The inventory file is managed by treating each row as a dictionary, \n",
     "    with the header row containing field names that are used as keys\n",
     "    for the dictionaries in the following rows.\n",
-    "    If the invetory files is created from scratch, the file tracking\n",
-    "    the proficts is created as well\n",
+    "    If the inventory files is created from scratch, the file tracking\n",
+    "    the profits is created as well\n",
     "    \n",
     "    \"\"\"\n",
     "    \n",
@@ -161,8 +161,8 @@
     "            inventory_writer.writerow(header_row)\n",
     "        print(\"File di inventario creato\")\n",
     "        \n",
-    "        with open(profit_file_name, 'w', newline = '') as profit_file:\n",
-    "            profit_file.write(\"0.0 0.0\")\n",
+    "        with open(profits_file_name, 'w', newline = '') as profits_file:\n",
+    "            profits_file.write(\"0.0 0.0\")\n",
     "        print(\"File dei profitti creato\")\n",
     "\n",
     "\n",
@@ -330,14 +330,14 @@
     "        selling_price (int): The price to sell the product \n",
     "    \"\"\"\n",
     "    \n",
-    "    with open(profit_file_name, 'r') as profit_file:\n",
-    "        line = profit_file.readline()\n",
-    "        gross_profit, net_profit = map(float, line.split())\n",
-    "        gross_profit += selling_price*sale_quantity\n",
-    "        net_profit += (selling_price - buying_price)*sale_quantity\n",
+    "    with open(profits_file_name, 'r') as profits_file:\n",
+    "        line = profits_file.readline()\n",
+    "        gross_profits, net_profits = map(float, line.split())\n",
+    "        gross_profits += selling_price*sale_quantity\n",
+    "        net_profits += (selling_price - buying_price)*sale_quantity\n",
     "    \n",
-    "    with open(profit_file_name, 'w', newline = '') as profit_file:\n",
-    "        profit_file.write(f\"{gross_profit} {net_profit}\")\n",
+    "    with open(profits_file_name, 'w', newline = '') as profits_file:\n",
+    "        profits_file.write(f\"{gross_profits} {net_profits}\")\n",
     "\n",
     "\n",
     "def sell_product(name, sale_quantity):\n",
@@ -386,13 +386,13 @@
     "    if they want to sell another product. If so, repeat the cycle.\"\n",
     "    \"\"\"\n",
     "    \n",
-    "    sell_again = \"si\"\n",
+    "    sell_again = \"sì\"\n",
     "    at_least_one_sale = False\n",
     "    products_sale = \"\"\n",
     "    selling_price = 0.0\n",
     "    total_sale = 0.0\n",
     "    \n",
-    "    while sell_again == \"si\":\n",
+    "    while sell_again == \"sì\":\n",
     "        \n",
     "        name = input(\"Nome del prodotto:\")\n",
     "        while name==\"\":\n",
@@ -429,14 +429,14 @@
     "\n",
     "def show_profits():\n",
     "    \"\"\"\n",
-    "    Show gross and net profit of recorded sales\n",
+    "    Show gross and net profits of recorded sales\n",
     "    \"\"\"\n",
     "    \n",
-    "    with open(profit_file_name, 'r') as profit_file:\n",
-    "        line = profit_file.readline()\n",
-    "        gross_profit, net_profit = map(float, line.split())\n",
+    "    with open(profits_file_name, 'r') as profits_file:\n",
+    "        line = profits_file.readline()\n",
+    "        gross_profits, net_profits = map(float, line.split())\n",
     "            \n",
-    "    print(f\"Profitto: lordo = {gross_profit:.2f} €, netto = {net_profit:.2f} €\\n\")\n",
+    "    print(f\"Profitti: lordo = {gross_profits:.2f} €, netto = {net_profits:.2f} €\\n\")\n",
     "        "
    ]
   },
@@ -501,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
